# xcelium-mcp

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
.bkit/runtime/: agent-state.json
.bkit/snapshots/: snapshot-1776077601705.json  snapshot-1776149408517.json  snapshot-1776243342255.json  snapshot-1776325949435.json  snapshot-1776691218481.json  (+1 more)
.claude/: settings.local.json
deploy/: README.md  claude-json-mcpServers-snippet.json  crontab.example
plans/: guardrails.md  prd.json  progress.md
skill-src/: README.md
specs/: simvision-integration-test.md  tool-verification.md
tcl/: mcp_bridge.tcl
tests/: SANITY.md  test_batch_helpers.py  test_bisect.py  test_bridge.py  test_bug_fixes.py  test_checkpoint_session_state.py  test_cli.py  test_compare_csv_diff.py  test_compound.py  test_config_action_checkpoint.py  test_config_cache_invalidation.py  test_deposit_signal.py  test_discovery_scan.py  test_dump_history_stats.py  test_dump_strategy.py  test_extract_csv_action.py  test_f136_f137.py  test_hierarchical_dump.py  test_idle_culler.py  test_idle_culler_batch_awareness.py  test_imports.py  test_launch_simvision.py  test_poll_batch_log.py  test_pure_helpers.py  test_registry_bridge_port.py  test_regression_classification.py  test_regression_result_collection.py  test_regression_summary.py  test_regression_tb_provenance_timing.py  test_resolve_test_name_cache_miss.py  test_schema_migration.py  test_sdf_instance_lookup.py  test_shm_naming.py  test_sim_lifecycle.py  test_sim_session_reaper.py  test_stdio_forward.py  test_tb_provenance.py  test_tools_compound.py  test_validate_run_params.py  test_validate_tcl_path.py
(+120 files in other folders)
