[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xcelium-mcp"
version = "0.1.0"
description = "MCP server for Cadence Xcelium/SimVision simulator control"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
screenshot = ["Pillow"]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[project.scripts]
xcelium-mcp = "xcelium_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xcelium_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
